# PythonTemplate

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  run.sh  test_config.py
config/: config.yaml
examples/: example_config_loader.py  example_logger.py
src/models/: __init__.py  config_models.py
src/utils/: config_loader.py  logger.py
